--- a/wp-content/themes/huskies-theme/less/variables.less
+++ b/wp-content/themes/huskies-theme/less/variables.less
@@ -1,2 +1,17 @@
 @sansFontFamily:  "Muli", "Helvetica Neue", Helvetica, Arial, sans-serif;
 @serifFontFamily: "Lobster", Georgia, "Times New Roman", Times, serif;
+
+@linkColor: @green;
+
+@gridColumnWidth:         55px;
+@gridGutterWidth:         10px;
+
+@gridColumnWidth1200:     65px;
+@gridGutterWidth1200:     20px;
+
+@gridColumnWidth768:      37px;
+@gridGutterWidth768:      15px;
+
+.tooltip {
+  font-size: 1.5rem;
+}
