--- a/wp-content/themes/huskies-theme/less/footer.less
+++ b/wp-content/themes/huskies-theme/less/footer.less
@@ -26,6 +26,40 @@
   }
 }
 
+#top_navigator { 
+  background-color: @green;
+  .border-radius(50%);
+  bottom: 5rem;
+  color: @gray;
+  display: none;
+  .opacity(50);
+  padding: 0.75rem 1rem;
+  position: fixed;
+  right: 6rem;
+  text-decoration: none;
+  z-index: 100;
+  font-size: 2rem;
+  text-shadow: @black 0 0.1rem 0;
+  .transition(all 1s ease);
+
+  &:after {
+    content: "";
+    width: 120%;
+    height: 120%;
+    border: 0.5rem solid @black;
+    .border-radius(50%);
+    background-color: transparent;
+    position: absolute;
+    left: -25%;
+    top: -25%;
+  }
+
+  &:hover {
+    .opacity(75);
+    color: @white;
+  }
+}
+
 #secondFooter {
   background-image: url("images/debut_dark.png");
   min-height: 10rem;
@@ -35,11 +69,10 @@
   position: relative;
 
   fieldset {
-    // border-top: 1px solid white;
-
     legend {
       text-align: center;
-      color: @white;
+      color: @grayLight;
+      text-shadow: @black 0 0.1rem 0;
       font-family: @serifFontFamily;
       border: none;
       .border-radius(1rem);
