--- a/wp-content/themes/huskies-theme/less/style.less
+++ b/wp-content/themes/huskies-theme/less/style.less
@@ -25,11 +25,7 @@ body {
   background-image: url("images/whitey.png");
 }
 
-@import "variables.less";
+@import "statics.less";
 @import "header.less";
+@import "content.less";
 @import "footer.less";
-
-#content {
-  min-height: 150rem;
-  padding: 1rem;
-}
