--- a/wp-content/themes/huskies-theme/style.css
+++ b/wp-content/themes/huskies-theme/style.css
@@ -8607,6 +8607,27 @@ a > * {
   -o-transition: all 1s ease;
   transition: all 1s ease;
 }
+hr.fancy {
+  margin: 5rem auto;
+  width: 80%;
+  border-top-color: #d5d5d5;
+  position: relative;
+}
+hr.fancy:before,
+hr.fancy:after {
+  position: absolute;
+  left: 25%;
+  content: "";
+  width: 50%;
+  margin: 0 auto;
+  border-top: 0.1rem solid #d5d5d5;
+}
+hr.fancy:before {
+  top: -0.65rem;
+}
+hr.fancy:after {
+  bottom: -0.5rem;
+}
 #content-wrapper {
   background-color: #ffffff;
   margin-top: 12rem;
@@ -8775,6 +8796,80 @@ a > * {
   color: #ffffff;
   text-shadow: 0 0.1rem 0 #000000;
 }
+#content {
+  min-height: 40rem;
+  padding: 2.5rem;
+}
+.articles article:nth-child(n+2) {
+  margin-top: 5rem;
+}
+.articles article header {
+  margin-bottom: 2rem;
+}
+.articles article header .article_meta_comments {
+  float: right;
+  position: relative;
+  padding: 0.5rem;
+  margin-right: 5rem;
+  margin-top: -1rem;
+}
+.articles article header .article_meta_comments:hover {
+  text-decoration: none;
+}
+.articles article header .article_meta_comments:hover:before {
+  color: #2f6f2f;
+}
+.articles article header .article_meta_comments:before {
+  -webkit-transition: all 1s ease;
+  -moz-transition: all 1s ease;
+  -o-transition: all 1s ease;
+  transition: all 1s ease;
+  color: #999999;
+  position: absolute;
+  left: -0.35rem;
+  top: -0.35rem;
+  font-size: 4rem;
+}
+.articles article header .page-header {
+  margin-bottom: 0;
+}
+.articles article header .page-header h1 > a {
+  word-wrap: break-word;
+  color: #333333;
+  text-shadow: #999999 0 0.1rem 0.25rem;
+}
+.articles article header .page-header h1 > a:hover {
+  text-decoration: none;
+  color: #2f6f2f;
+}
+.articles article header .article_meta_tags,
+.articles article header .article_meta_categories {
+  color: #999999;
+  margin-bottom: 0;
+}
+.articles article header .article_meta_tags dt,
+.articles article header .article_meta_categories dt {
+  width: auto;
+  font-weight: normal;
+}
+.articles article header .article_meta_tags dd,
+.articles article header .article_meta_categories dd {
+  margin-left: 9.5rem;
+}
+.articles article header .article_meta_tags dd {
+  margin-left: 5rem;
+}
+.articles article figure {
+  float: left;
+  margin: 0;
+  margin-right: 2rem;
+}
+.articles article figure a {
+  display: block;
+}
+.articles article small {
+  color: #999999;
+}
 #firstFooter {
   position: absolute;
   bottom: -3.25rem;
@@ -8829,14 +8924,14 @@ a > * {
   content: "";
   width: 120%;
   height: 120%;
-  border: 0.5rem solid #000000;
+  border: 0.25rem solid #000000;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   border-radius: 50%;
   background-color: transparent;
   position: absolute;
-  left: -25%;
-  top: -25%;
+  left: -17.5%;
+  top: -17.5%;
 }
 #top_navigator:hover {
   opacity: 0.75;
@@ -8865,8 +8960,4 @@ a > * {
   -webkit-box-shadow: 0rem 0.6rem 0.8rem -0.8rem #000000;
   -moz-box-shadow: 0rem 0.6rem 0.8rem -0.8rem #000000;
   box-shadow: 0rem 0.6rem 0.8rem -0.8rem #000000;
-}
-#content {
-  min-height: 150rem;
-  padding: 1rem;
 }
