--- a/wp-content/themes/huskies-theme/less/footer.less
+++ b/wp-content/themes/huskies-theme/less/footer.less
@@ -1,7 +1,5 @@
 #firstFooter {
-  position: absolute;
-  bottom: -3.25rem;
-  @media (max-width: 767px) { bottom: -5.25rem; }
+  // @media (max-width: 767px) { bottom: -5.25rem; }
   color: @black;
   text-align: center;
 
