--- a/wp-content/themes/huskies-theme/less/statics.less
+++ b/wp-content/themes/huskies-theme/less/statics.less
@@ -12,6 +12,10 @@
 @gridColumnWidth768:      37px;
 @gridGutterWidth768:      15px;
 
+h1, h2, h3, h4, h5 {
+  font-weight: normal;
+}
+
 .tooltip {
   font-size: 1.5rem;
 }
@@ -21,8 +25,15 @@ a > * {
   .transition(all 1s ease);
 }
 
+ .form-search button {
+  padding: 0.7rem;
+  margin-top: -0.05rem;
+  margin-right: -0.25rem;
+  line-height: 1;
+}
+
 hr.fancy { 
-  margin: 5rem auto; 
+  margin: 0 auto; 
   width: 80%;
   border-top-color: darken(@grayLighter, 10%);
   position: relative;
