--- a/wp-content/themes/huskies-theme/less/header.less
+++ b/wp-content/themes/huskies-theme/less/header.less
@@ -105,7 +105,7 @@
   .form-search {
     position: absolute;
     right: 12.5rem;
-    top: 0.25rem;
+    bottom: 0.5rem;
     .transition(all 1s ease);
 
     @media (max-width: 767px) { right: 0rem; }
