fixed comment styling at phone view

--- a/wp-content/themes/huskies-theme/less/content.less
+++ b/wp-content/themes/huskies-theme/less/content.less
@@ -14,8 +14,8 @@
       .article_meta_comments {
         float: right;
         z-index: 10;
-        margin-right: 5rem;
-        
+        @media (min-width: 768px) { margin-right: 5rem; }
+
         &:hover { 
           text-decoration: none; 
 
