--- a/wp-content/themes/huskies-theme/less/comments.less
+++ b/wp-content/themes/huskies-theme/less/comments.less
@@ -38,38 +38,71 @@
       > a { 
         margin-right: 2rem; 
         position: relative;
+        margin-bottom: 2rem;
+        float: none;
+        display: block;
+
+        @media (min-width: 768px) { 
+          margin-bottom: 0; 
+          float: left;
+        }
 
         &:after {
           content: "";
           position: absolute;
-          border-right: 1.5rem solid rgba(0, 0, 0, 0.2);
           width: 0; 
           height: 0; 
-          border-top: 1.5rem solid transparent;
-          border-bottom: 1.5rem solid transparent;
-          right: -2rem;
-          top: 30%;
+          @media (max-width: 767px) { 
+            border-bottom: 1.5rem solid rgba(0, 0, 0, 0.2);
+            border-left: 1.5rem solid transparent;
+            border-right: 1.5rem solid transparent;
+            left: 1.5rem;
+            bottom: -2rem;
+          }
+
+          @media (min-width: 768px) { 
+            border-right: 1.5rem solid rgba(0, 0, 0, 0.2);
+            border-top: 1.5rem solid transparent;
+            border-bottom: 1.5rem solid transparent;
+            border-left: none;
+            right: -2rem;
+            top: 30%;
+          }
         }
       }
 
       > div {
-        border-left: 0.1rem solid rgba(0, 0, 0, 0.2);
+        border-top: 0.1rem solid rgba(0, 0, 0, 0.2);
+        @media (min-width: 768px) { 
+          border-left: 0.1rem solid rgba(0, 0, 0, 0.2); 
+          border-top: none;
+        }
         padding: 0.5rem;
         position: relative;
+        @media (max-width: 767px) { 
+          overflow: visible;
+        }
 
         .page-header {
           margin-top: 0;
           margin-bottom: 0.5rem;
           padding: 0;
           border-bottom: 0.1rem solid rgba(0, 0, 0, 0.2);
+          position: relative;
 
-          span { margin-top: -2rem; }
+          span { 
+            margin-top: -2rem; 
+
+            @media (max-width: 767px) { 
+              position: absolute;
+              right: 0;
+              top: -2rem;
+            }
+          }
         }
       }
     }
   }
-
-
 
   #respond {
     margin-top: @gap;
@@ -86,7 +119,8 @@
 
       h3 { margin: 0; }
 
-      .comment_notes { 
+      .comment_notes,
+      .comment_logged_in_as { 
         color: @grayLight; 
 
         code { color: @textColor; }
