--- a/wp-content/themes/huskies-theme/style.css
+++ b/wp-content/themes/huskies-theme/style.css
@@ -8816,7 +8816,11 @@ hr.fancy:after {
 #content article header .article_meta_comments {
   float: right;
   z-index: 10;
-  margin-right: 5rem;
+}
+@media (min-width: 768px) {
+  #content article header .article_meta_comments {
+    margin-right: 5rem;
+  }
 }
 #content article header .article_meta_comments:hover {
   text-decoration: none;
@@ -8912,31 +8916,73 @@ hr.fancy:after {
 #comments .commentlist .comment > a {
   margin-right: 2rem;
   position: relative;
+  margin-bottom: 2rem;
+  float: none;
+  display: block;
+}
+@media (min-width: 768px) {
+  #comments .commentlist .comment > a {
+    margin-bottom: 0;
+    float: left;
+  }
 }
 #comments .commentlist .comment > a:after {
   content: "";
   position: absolute;
-  border-right: 1.5rem solid rgba(0, 0, 0, 0.2);
   width: 0;
   height: 0;
-  border-top: 1.5rem solid transparent;
-  border-bottom: 1.5rem solid transparent;
-  right: -2rem;
-  top: 30%;
+}
+@media (max-width: 767px) {
+  #comments .commentlist .comment > a:after {
+    border-bottom: 1.5rem solid rgba(0, 0, 0, 0.2);
+    border-left: 1.5rem solid transparent;
+    border-right: 1.5rem solid transparent;
+    left: 1.5rem;
+    bottom: -2rem;
+  }
+}
+@media (min-width: 768px) {
+  #comments .commentlist .comment > a:after {
+    border-right: 1.5rem solid rgba(0, 0, 0, 0.2);
+    border-top: 1.5rem solid transparent;
+    border-bottom: 1.5rem solid transparent;
+    border-left: none;
+    right: -2rem;
+    top: 30%;
+  }
 }
 #comments .commentlist .comment > div {
-  border-left: 0.1rem solid rgba(0, 0, 0, 0.2);
+  border-top: 0.1rem solid rgba(0, 0, 0, 0.2);
   padding: 0.5rem;
   position: relative;
+}
+@media (min-width: 768px) {
+  #comments .commentlist .comment > div {
+    border-left: 0.1rem solid rgba(0, 0, 0, 0.2);
+    border-top: none;
+  }
+}
+@media (max-width: 767px) {
+  #comments .commentlist .comment > div {
+    overflow: visible;
+  }
 }
 #comments .commentlist .comment > div .page-header {
   margin-top: 0;
   margin-bottom: 0.5rem;
   padding: 0;
   border-bottom: 0.1rem solid rgba(0, 0, 0, 0.2);
+  position: relative;
 }
 #comments .commentlist .comment > div .page-header span {
   margin-top: -2rem;
+}
+@media (max-width: 767px) {
+  #comments .commentlist .comment > div .page-header span {
+    position: absolute;
+    right: 0;
+    top: -2rem;
+  }
 }
 #comments #respond {
   margin-top: 2rem;
@@ -8958,10 +9004,12 @@ hr.fancy:after {
 #comments #respond > .page-header h3 {
   margin: 0;
 }
-#comments #respond > .page-header .comment_notes {
+#comments #respond > .page-header .comment_notes,
+#comments #respond > .page-header .comment_logged_in_as {
   color: #999999;
 }
-#comments #respond > .page-header .comment_notes code {
+#comments #respond > .page-header .comment_notes code,
+#comments #respond > .page-header .comment_logged_in_as code {
   color: #333333;
 }
 @media (min-width: 768px) {
